--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.4.0",
     "redux": "^4.2.1",
+    "redux-form": "^8.3.9",
     "redux-thunk": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
